[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project.scripts]
symclatron = "symclatron.symclatron:app"

[project]
name = "symclatron"
authors = [{ name = "Juan C. Villada", email = "jvillada@lbl.gov" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["bioinformatics", "machine-learning", "symbiosis", "microbiology", "classification", "genomics"]
requires-python = ">=3.12,<3.13"
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "typer>=0.12.3,<0.13",
    "pandas>=2.2.2,<2.3",
    "numpy>=1.26.4,<2.0",
    "xgboost>=2.1.1,<2.2",
    "shap>=0.45.1,<0.46",
    "scikit-learn>=1.5.1,<1.6",
    "tensorflow-cpu>=2.18.0,<2.19",
    "joblib>=1.4.2,<1.5",
    "pyhmmer>=0.12.0,<0.13",
    "pyrodigal>=3.6.0,<3.7",
    "psutil>=6.0,<8.0"
]
dynamic = ["version", "description"]


[project.urls]
Homepage = "https://github.com/NeLLi-team/symclatron"
Documentation = "https://github.com/NeLLi-team/symclatron#readme"
Repository = "https://github.com/NeLLi-team/symclatron"
"Bug Tracker" = "https://github.com/NeLLi-team/symclatron/issues"

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.12,<3.13"
typer = ">=0.12.3,<0.13"
pandas = ">=2.2.2,<2.3"
numpy = ">=1.26.4,<2.0"
xgboost = ">=2.1.1,<2.2"
shap = ">=0.45.1,<0.46"
scikit-learn = ">=1.5.1,<1.6"
tensorflow-cpu = ">=2.18.0,<2.19"
joblib = ">=1.4.2,<1.5"
pyhmmer = ">=0.12.0,<0.13"
pyrodigal = ">=3.6.0,<3.7"
psutil = ">=6.0,<8.0"
